--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -3,11 +3,16 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .post{
-  max-width: 450px;
-  border: 1px solid #ccc;
+  background-color: rgba(255,255,255,.80);
+  border: 1px solid #588B74;
+  border-left: 3px solid #588B74;
   padding: 15px;
   margin-bottom: 20px;
   overflow: auto;
+  font-family: 'Roboto', sans-serif;
+  font-size: 15px;
+
+
 }
 
 .profile-section{
@@ -25,20 +30,37 @@
   width: 275px;
   width: calc(100% - 85px - 50px);
   float: left;
+  margin-top: 3%;
+
 }
 
 .author{
   margin: 0;
-  margin-top: 5px;
+  margin-top: 15px;
 }
 
 .post .actions{
+  padding-top:10px;
   width: 50px;
   float: left;
   font-size: 25px;
   text-align: center;
-}
+  color: #588B74;
 
+}
+.author a{
+  color:#59272A;
+}
 .post .actions a {
   text-decoration: none !important;
+  color: #59272A;
+}
+.post .actions a.fa-heart {
+
+}
+
+.post a:hover{
+  text-decoration: none;
+  color:#59272A;
+  background: none;
 }
