--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,5 +1,7 @@
 body {
-  background-color: #fff;
+  background-color: white;
+
+
   color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
@@ -8,8 +10,9 @@ body {
 }
 
 p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
+  font-family: 'Roboto', sans-serif;
+
+  font-size: 15px;
   line-height: 18px;
   margin: 33px;
 }
@@ -86,4 +89,5 @@ div {
 
 label {
   display: block;
+
 }
