--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,23 +7,26 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:800" rel="stylesheet">
   </head>
 
   <body>
     <header>
-      <div class="left">
-      <h1><%= link_to 'Flutter', root_path %></h1>
 
-    </div>
 
-      <div class="right">
+
+    <%= link_to root_path do %>
+           <%= image_tag "logo/new_03.png", class: "logo"%>
+        <% end %>
+    <br>
         <% if current_user %>
-          Welcome <%= current_user %>! <br> <%= link_to 'logout', logout_path %>
+          Welcome <%= current_user %>! | <%= link_to 'logout', logout_path %>
         <%else%>
         <%= link_to 'Sign Up', register_path %>
+        <%= '|' %>
         <%= link_to 'Login', login_path %>
         <%end%>
-      </div>
     </header>
     <%= yield %>
   </body>
