--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,3 +1,5 @@
+<body>
+
 <%= form_for(post, remote: true) do |f| %>
   <% if post.errors.any? %>
     <div id="error_explanation">
@@ -11,12 +13,15 @@
     </div>
   <% end %>
 
+
+<div class="form">
   <div class="field">
-    <%= f.label :body %>
-    <%= f.text_area :body %>
+    <% f.label :body  %>
+    <%= f.text_area :body, class: 'formbody',  placeholder: "What's Happening?" %>
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: 'submit', value: 'Fleet' %>
   </div>
+</div>
 <% end %>
