--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -9,7 +9,7 @@
   <div class="content">
     <%= post.body %>
     <p class="author">
-      <%= link_to post.user, post.user %> - <%= post.created_at %>
+      <%= link_to post.user, post.user %> - <%= post.created_at.strftime("%H:%M") %>
     </p>
   </div>
 
@@ -22,7 +22,7 @@
 
 
     <% if current_user == post.user %>
-    <%= link_to '', post, method: :delete, class:'fa fa-trash', remote: true, data: {confirm: 'Are you sure?'} %>
+    <%= link_to '', post, method: :delete, class:'fa fa-times', remote: true, data: {confirm: 'Are you sure?'} %>
     <%end%>
   </div>
 
